@@ -40,6 +40,7 @@ typedef enum
   CMD_LIST_RFIND_NEXT,
   CMD_LIST_MOVE_UP,
   CMD_LIST_MOVE_DOWN,
+  CMD_MOUSE_EVENT,
   CMD_SCREEN_UPDATE,
   CMD_SCREEN_PREVIOUS,
   CMD_SCREEN_NEXT,
